--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Meu portfólio</title>
 </head>
 
@@ -14,7 +15,7 @@
             <a href="">Início</a>
             <a href="">Sobre Mim</a>
             <a href="">Projetos</a>
-            <a href="">Habilidades</a>
+            <a style="margin-right: 4%;" href="">Habilidades</a>
         </div>
     </nav>
 
