--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <a style="margin-right: 4%;" href="">Habilidades</a>
         </div>
     </nav>
+    <section></section>
+
 
 </body>
 
