--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
             <a style="margin-right: 4%;" href="">Habilidades</a>
         </div>
     </nav>
-    <section></section>
+    <section>
+        <div class="corpo">
+            Olá, me chamo Eduardo Henrique <br>
+            Venha conhecer meu <br><button><a href="">Linkedin</a></button>
+        </div>
+    </section>
 
 
 </body>
