--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             Olá, me chamo Eduardo Henrique <br>
             Venha conhecer meu <br><button><a href="">Linkedin</a></button>
         </div>
+        <img src="imagens/icon-r.png" alt="Arte do Eduardo Henrique">
+
     </section>
 
 
