--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
 
     </section>
 
+    <div class="corpo_2">
+        <h1>Apresetação</h1>
+        <p>Meu nome é Eduardo Henrique e tenho estudado desenvolvimento web há cerca de 6 meses. Durante este tempo, eu
+            adquiri habilidades em HTML, CSS e JavaScript, além de ser capaz de trabalhar com o WordPress. Comecei a
+            estudar pelo front-end, mas recentemente tenho me interessado em aprender sobre o back-end para me tornar um
+            profissional full-stack.
+
+            Para demonstrar meu trabalho e conhecimento, criei um site que apresenta alguns dos projetos que desenvolvi
+            até o momento. Este site também oferece uma visão geral sobre minhas habilidades e experiências na área de
+            desenvolvimento web. Você pode acessá-lo em [inserir endereço do site].
+
+            Estou animado para encontrar novas oportunidades para continuar aprendendo e crescer em minha carreira.
+            Acredito que posso contribuir com minha dedicação, habilidades técnicas e comprometimento para o sucesso do
+            seu projeto.</p>
+    </div>
+
 
 </body>
 
